# yagura

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
starters/_shared/: bootstrap.py  cli.py
starters/browser/: README.md  config.py  main.py  requirements.txt  tools.py
starters/chatbot/: README.md  config.py  main.py  requirements.txt  tools.py
starters/data/: README.md  config.py  init_db.py  main.py  requirements.txt  tools.py
starters/devops/: README.md  config.py  main.py  requirements.txt  tools.py
starters/enterprise/: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  llm_routing.py  main.py  requirements.txt  security_policy.py  tools.py
starters/filemanager/: README.md  config.py  main.py  requirements.txt  tools.py
starters/office/: .gitignore  README.md  config.py  main.py  requirements.txt  tools.py
tests/: conftest.py
tests/ecosystem/: conftest.py  test_bedrock_oauth.py  test_common_integration.py  test_db_integration.py  test_ecosystem_smoke.py  test_llm_tools_integration.py
tests/starters/: conftest.py  test_starters.py  test_starters_e2e.py
tests/unit/: test_assessor_layers.py  test_auto_execute.py  test_config.py  test_conversational_memory.py  test_danger_assessor.py  test_dynamic_tool.py  test_llm_router.py  test_pause_resume.py  test_plan_executor.py  test_plan_state.py  test_presets.py  test_regressions.py  test_reliability.py  test_session.py  test_step_context.py  test_streaming.py  test_telemetry.py  test_tool_registry.py
yagura/: __init__.py  agent.py  config.py  errors.py  plan.py  streaming.py  telemetry.py
yagura/auth/: __init__.py  apikey.py  noauth.py  provider.py
(+39 files in other folders)
